# antigravity-rag-cosense

./: .env.example  .gitignore  INSTRUCTIONS.md  Makefile  README.md  docker-compose.yml  plan.md
.agents/workflows/: dev.md  ingest.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  encoder_client.py  es_client.py  llm_client.py  main.py
batch/: Dockerfile  pyproject.toml
batch/app/: config.py  cosense_client.py  encoder_client.py  es_client.py  ingest.py
elasticsearch/: Dockerfile
encoder/: pyproject.toml  test_encode.py
encoder/app/: config.py  main.py  sparse_encoder.py
frontend/: Dockerfile  index.html  package-lock.json
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: ResultView.tsx  SearchBar.tsx
