[project]
name = "rag-cosense-backend"
version = "0.1.0"
description = "RAG search API with Elasticsearch and Ollama"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "elasticsearch>=8.17.0,<9.0.0",
    "ollama>=0.4.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
