[project]
name = "rag-cosense-batch"
version = "0.1.0"
description = "Batch ingestion from Cosense into Elasticsearch"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=8.17.0,<9.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
