[project]
name = "rag-cosense-encoder"
version = "0.1.0"
description = "Sparse vector encoding API using japanese-splade"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "yasem>=0.3.0",
    "pydantic-settings>=2.0.0",
    "fugashi",
    "unidic-lite",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
